--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
         </div>
         <div>
             <input type="button" value=" " id="btn7" onclick="clickBtn7()">
-            <input type="button" value=" " id="btn8"onclick="clickBtn8()">
+            <input type="button" value=" " id="btn8" onclick="clickBtn8()">
             <input type="button" value=" " id="btn9" onclick="clickBtn9()">
         </div>
     </section>
-    <section></section>
+    <section>
+        <h2>
+            <span id="lblJogador">Jogador X</span>
+            <span id="lblJogadas">(1ª Jogada)</span>
+        </h2>
+    </section>
   </main>  
 </body>
 </html>
