--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <span id="lblJogador">Jogador X</span>
                 <span id="lblJogadas">(1ª Jogada)</span>
             </h2>
+            
+            <input type="button" value="Reiniciar" class="reinicio" id="btnReiniciar" onclick="clickReiniciar()">
+
         </section>
     </main>
 </body>
