--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
 
     <!-- JavaScript -->
-    <script src="js/script.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 
 </html>
