--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <img id="lucario" src="img/lucario.png.png">
+    <img id="dragonyte" src="img/dragonyte.png">
     <main>
         <section>
             <h1>Jogo da Velha</h1>
