--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img id="lucario" src="img/lucario.png.png">
+    <img id="lucario" src="img/lucario.png">
     <img id="dragonyte" src="img/dragonyte.png">
     <main>
         <section>
@@ -30,6 +30,10 @@
                 <input type="button" value=" " id="poke4" onclick="clickPoke('gyrados')">
                 <input type="button" value=" " id="poke5" onclick="clickPoke('tyranitar')">
                 <input type="button" value=" " id="poke6" onclick="clickPoke('vaporeon')">
+                <input type="button" value=" " id="poke7" onclick="clickPoke('Greninja')">
+                <input type="button" value=" " id="poke8" onclick="clickPoke('lucario')">
+                <input type="button" value=" " id="poke9" onclick="clickPoke('scyzor')">
+            
             </div>
         </section>
 
