--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                 <input type="button" value=" " id="poke4" onclick="clickPoke('gyrados')">
                 <input type="button" value=" " id="poke5" onclick="clickPoke('tyranitar')">
                 <input type="button" value=" " id="poke6" onclick="clickPoke('vaporeon')">
+            </div>
+            <div>
                 <input type="button" value=" " id="poke7" onclick="clickPoke('Greninja')">
                 <input type="button" value=" " id="poke8" onclick="clickPoke('lucario')">
                 <input type="button" value=" " id="poke9" onclick="clickPoke('scyzor')">
-            
             </div>
         </section>
 
